fix weird hiding bug

--- a/player.html
+++ b/player.html
@@ -14,6 +14,7 @@
     #albumArt                 {z-index: 1;}
     #shade                    {z-index: 2;}
     #frame                    {z-index: 3;}
+    #hideWrapper              {z-index: 4;}
     #bar, #trackInfo, #barCap {z-index: 4;}
     #fakeFrame                {z-index: 5;}
     
